# glcore

./: CMakeLists.txt  imgui.ini
assets/GLSL/: first_example.glsl
glcore/core/: application.cpp  application.hpp  core.hpp  input.cpp  input.hpp  key_codes.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  linux_window.cpp  linux_window.hpp  log.cpp  log.hpp  window.cpp  window.hpp
glcore/events/: application_event.cpp  application_event.hpp  event.cpp  event.hpp  key_event.cpp  key_event.hpp  mouse_event.cpp  mouse_event.hpp
glcore/imgui/: imgui_layer.cpp  imgui_layer.hpp
glcore/main/: CMakeLists.txt  main.cpp
glcore/main/example_layers/: first_example.cpp  first_example.hpp
glcore/renderer/: orthographic_camera.cpp  orthographic_camera.hpp  orthographic_camera_controller.cpp  orthographic_camera_controller.hpp  shader.cpp  shader.hpp
glcore/utils/: random.cpp  random.hpp
